tests/sketchy_boolean_op/sketchy_boolean_op.exp
Error: test.js:6
  6: a && foo();
     ^^^^^^^^^^ sketchy-boolean-op: Left side of && is always falsy, so the right side is unreachable.
    6: a && foo();
       ^ Always falsy
    6: a && foo();
            ^^^^^ Unreachable code

Error: test.js:10
 10: b && foo();
     ^^^^^^^^^^ sketchy-boolean-op: Left side of && is always falsy, so the right side is unreachable.
   10: b && foo();
       ^ Always falsy
   10: b && foo();
            ^^^^^ Unreachable code

Error: test.js:22
 22: e && foo();
     ^^^^^^^^^^ sketchy-boolean-op: Left side of && is always truthy, so the value is never used.
   22: e && foo();
       ^ Always truthy
   22: e && foo();
            ^^^^^ && will always evaluate to this

Error: test.js:26
 26: f && foo();
     ^^^^^^^^^^ sketchy-boolean-op: Left side of && is always truthy, so the value is never used.
   26: f && foo();
       ^ Always truthy
   26: f && foo();
            ^^^^^ && will always evaluate to this


Found 4 errors
